k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sosguinee
  labels:
    app.kubernetes.io/part-of: sosguinee
